# toolbox.py

./: .cursorrules  .gitignore  BACKLOG_DONE.md  CONTEXT.md  MASTER_PROMPT.md  PROJECT_RULES.md  README.md  WALKTHROUGH.md  pyproject.toml  requirements.txt  toolbox.py
.agent/rules/: code-style-guide.md
core/: system_check.py
docs/: WALKTHROUGH.md
kokopelli/: sitemap.json
kokopelli/sitemaps/: pages.xml  products.xml  sitemap.xml  static.xml
scripts/disk_usage/: usage.py
scripts/file_cleaner/: cleaner.py
scripts/git_health/: git_health.py
scripts/image_resizer/: resizer.py
scripts/people_map/: people.json  people_map.py
scripts/people_map/templates/: index.html
scripts/weather_forecast/: weather.py
scripts/web_scraper/: requirements.txt  web_scraper.py
